souphttpsrc: Retry connection if we're finished before the content size only if we actually have a content size

https://bugzilla.gnome.org/show_bug.cgi?id=722185